--- a/src/gui/addCompetition.fxml
+++ b/src/gui/addCompetition.fxml
@@ -27,10 +27,13 @@
                   <Image url="@../images/back.png" />
                </image>
             </ImageView>
-            <Button layoutX="88.0" layoutY="48.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="38.0" style="-fx-background-color: trasnparent;" />
+            <Button fx:id="returnBtn" layoutX="88.0" layoutY="48.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="38.0" style="-fx-background-color: transparent;">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
          </children>
          <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="DEFAULT" />
          </cursor>
       </AnchorPane>
    </top>
