--- a/src/gui/displayCompetiton.fxml
+++ b/src/gui/displayCompetiton.fxml
@@ -28,7 +28,7 @@
                   <Image url="@../images/back.png" />
                </image>
             </ImageView>
-            <Button layoutX="88.0" layoutY="48.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="38.0" style="-fx-background-color: trasnparent;">
+            <Button fx:id="returnBtn" layoutX="88.0" layoutY="48.0" mnemonicParsing="false" onAction="#back" prefHeight="31.0" prefWidth="38.0" style="-fx-background-color: transparent;">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
