--- a/src/gui/addCompetition.fxml
+++ b/src/gui/addCompetition.fxml
@@ -27,7 +27,7 @@
                   <Image url="@../images/back.png" />
                </image>
             </ImageView>
-            <Button fx:id="returnBtn" layoutX="88.0" layoutY="48.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="38.0" style="-fx-background-color: transparent;">
+            <Button fx:id="returnBtn" layoutX="88.0" layoutY="48.0" mnemonicParsing="false" onAction="#back" prefHeight="31.0" prefWidth="38.0" style="-fx-background-color: transparent;">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
@@ -75,7 +75,7 @@
                   <Font name="Verdana" size="14.0" />
                </font>
             </TextArea>
-            <Button fx:id="addBtn" layoutX="745.0" layoutY="524.0" mnemonicParsing="false" onAction="#saveCompetition" prefHeight="46.0" prefWidth="223.0" style="-fx-background-color: #0598ff; -fx-background-radius: 15;" text="Add Competition" textFill="WHITE">
+            <Button fx:id="addBtn" layoutX="745.0" layoutY="524.0" mnemonicParsing="false" onAction="#saveCompetition" prefHeight="46.0" prefWidth="223.0" style="-fx-background-color: #0598ff; -fx-background-radius: 15;" stylesheets="@addcompetition.css" text="Add Competition" textFill="WHITE">
                <font>
                   <Font size="21.0" />
                </font>
