--- a/src/gui/menuCompetition.fxml
+++ b/src/gui/menuCompetition.fxml
@@ -1,14 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MenuCompetitionController">
+<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MenuCompetitionController">
     <stylesheets>
-        <URL value="@menucompetition.css"/>
+        <URL value="@menucompetition.css" />
     </stylesheets>
+   <children>
+      <VBox prefHeight="720.0" prefWidth="320.0" style="-fx-background-color: #999999;">
+         <children>
+            <Button fx:id="adc" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#addcomp" prefHeight="90.0" prefWidth="320.0" style="-fx-background-color: transparent;" text="   Add New Competition">
+               <graphic>
+                  <FontAwesomeIconView glyphName="PLUS" size="35" />
+               </graphic>
+               <padding>
+                  <Insets left="40.0" />
+               </padding>
+               <font>
+                  <Font name="Times New Roman" size="22.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="mc" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#manage" prefHeight="90.0" prefWidth="320.0" style="-fx-background-color: transparent;" text="  Manage Competitions">
+               <padding>
+                  <Insets left="40.0" />
+               </padding>
+               <font>
+                  <Font name="Times New Roman" size="22.0" />
+               </font>
+               <graphic>
+                  <FontAwesomeIconView glyphName="EDIT" size="35" />
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="ans" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="100.0" mnemonicParsing="false" onAction="#addsport" prefHeight="90.0" prefWidth="320.0" style="-fx-background-color: transparent;" text="  Add New Sport">
+               <padding>
+                  <Insets left="40.0" />
+               </padding>
+               <font>
+                  <Font name="Times New Roman" size="22.0" />
+               </font>
+               <graphic>
+                  <FontAwesomeIconView glyphName="UNLOCK" size="35" />
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+         </children>
+      </VBox>
+      <ImageView fitHeight="277.0" fitWidth="394.0" layoutX="1057.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Fitnatic.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="497.0" fitWidth="661.0" layoutX="411.0" layoutY="177.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/tournoi%20(1).jpg" />
+         </image>
+      </ImageView>
+   </children>
 </AnchorPane>
