--- a/src/gui/addSport.fxml
+++ b/src/gui/addSport.fxml
@@ -11,12 +11,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="gui.AddSportController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.AddSportController">
     <stylesheets>
         <URL value="@addsport.css" />
     </stylesheets>
    <children>
-      <AnchorPane fx:id="prizeTxt" layoutX="10.0" prefHeight="730.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;">
+      <AnchorPane fx:id="prizeTxt" layoutX="5.0" layoutY="4.0" prefHeight="730.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;">
          <children>
             <TextField fx:id="sportName" layoutX="657.0" layoutY="180.0" prefHeight="43.0" prefWidth="266.0" promptText="Sport Name" style="-fx-background-color: transparent; -fx-border-color: #0598ff; -fx-border-width: 0px 0px 2px 0px;">
                <font>
