--- a/src/gui/menuCompetition.fxml
+++ b/src/gui/menuCompetition.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+
 <AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MenuCompetitionController">
     <stylesheets>
         <URL value="@menucompetition.css" />
@@ -69,6 +70,20 @@
                </font>
                <graphic>
                   <FontAwesomeIconView glyphName="EDIT" size="35" />
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="competitions" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="280.0" mnemonicParsing="false" onAction="#enterCompetitons" prefHeight="90.0" prefWidth="320.0" style="-fx-background-color: transparent;" text="  Competitons List">
+               <padding>
+                  <Insets left="40.0" />
+               </padding>
+               <font>
+                  <Font name="Times New Roman" size="22.0" />
+               </font>
+               <graphic>
+                  <FontAwesomeIconView glyphName="LIST" size="35" />
                </graphic>
                <cursor>
                   <Cursor fx:constant="HAND" />
